# autonomous-newsroom

./: .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.ps1
.devcontainer/: devcontainer.json
config/: prompts.yaml
src/: llm_client.py  main.py  schemas.py
src/agents/: editor_agent.py  research_agent.py  writer_agent.py
src/core/: orchestrator.py  prompt_loader.py
src/static/: app.js  style.css
src/templates/: index.html
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_schemas.py
